--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 29
     buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "air.http.request"
         minSdkVersion 16
-        targetSdkVersion 26
-        versionCode 2010000
-        versionName "2.1.0"
+        targetSdkVersion 29
+        versionCode 2010100
+        versionName "2.1.1"
     }
     buildTypes {
         release {
@@ -22,6 +22,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:26.0.1'
-    implementation 'com.android.support:design:26.1.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
 }
